<!DOCTYPE resources [<!ENTITY appname "MyAppName"><!ENTITY userphonenumber "9988776655">]>
<resources>
    <string name="app_name">SNanny</string>
    <string name="viewpager1">Come and get the best offers from the app and earn rewards</string>
    <string name="name">Who are you?</string>
    <string name="nani">Nani</string>
    <string name="user">User</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="newaccount">New Users?</string>
    <string name="signup">Sign Up</string>
    <string name="Bank1">Enter Bank Name</string>
    <string name="account1">Account Number</string>
    <string name="accountnumber">Enter account number</string>
    <string name="accname">Account holder Name</string>
    <string name="accname2">Enter Account holder Name</string>
    <string name="branchname">Branch Name</string>
    <string name="branchname2">Enter Branch Name</string>
    <string name="branchcode">Branch Code</string>
    <string name="branchcode2">Enter Branch Code</string>
    <string name="phonenumber">Mobile number</string>
    <string name="phonenumber2">Enter Mobile Number</string>
    <string name="next">Next</string>
    <string name="phonenumberofperson">9988776655</string>
    <string name="otptext">A Verification code has been sent to you at phonenumber &userphonenumber;.Please verify it</string>
    <string name="entercode">Enter the Verification code.</string>
    <string name="verifyotp">Verify OTP</string>
    <string name="resendotp">Resend OTP</string>
    <string name="home">Home</string>
    <string name="myorders">My Orders</string>
    <string name="payment">Payment</string>
    <string name="goodfood">Nice Food..</string>
    <string name="deliverydate">Delivery time : 5pm</string>
    <string name="profile">Profile</string>
    <string name="personName">Shivam Thakur</string>
    <string name="editprofile">Edit profile</string>
    <string name="email">Email</string>
    <string name="examplemail">Example@example.com</string>
    <string name="examplephone">9988776655</string>
    <string name="notificationperson">ABCD has commented on your food.</string>
    <string name="notificationpersontime">5 months ago</string>
    <string name="notification">Notification</string>
    <string name="bookfood">Order Food</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirmOrder">Confirm Order With Nani</string>
    <string name="food1">Food is Being Prepared</string>
    <string name="onway">Courier on the Way</string>
    <string name="onway1">Courier is on Way</string>
    <string name="foodisariving">Food is ariving</string>
    <string name="totalPayment">$ 100000</string>
    <string name="totalPaymenttext">Total Payment</string>
    <string name="history">History</string>
    <string name="shiivam">Shivam</string>
    <string name="amritsar">Amritsar</string>
    <string name="amount">$10</string>
    <string name="profilesettings">Profile Settings</string>
    <string name="legalsettings">Legal terms and Settings</string>
    <string name="faqsettings">Faq Settings</string>
    <string name="completed">Completed</string>
    <string name="namevalue">Name</string>
    <string name="addressvalue">Address</string>
    <string name="specialities">Specialities</string>
    <string name="hints">Select Your Specialities</string>
    <string name="specialitieslist">Choose Your Specialities</string>
    <string name="changePassword">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="chooseAction">Choose Action</string>
    <string name="opencamera">Open Camera</string>
    <string name="opengallery">Open gallery</string>
    <string name="switchtouser">Switch To User</string>
    <string name="foooddetails">Food Details</string>
    <string name="itemcount">Item Count Here</string>
    <string name="totalmoney">Totalmoney here</string>
    <string name="description">Description</string>
    <string name="descriptiontext">Description will come here</string>
    <string name="quanity">Quantity Available :</string>
    <string name="quanityvalue">Quantity value</string>
    <string name="quanityperitem">Quantity per item :</string>
    <string name="listofingrediants">List of Ingrediants</string>
    <string name="listofingrediantsvalue">Ingrediants list will come here</string>
    <string name="listofmeat">Source of Meat Products</string>
    <string name="listofmeatproducts">Meat Products list here</string>
    <string name="listofinstructions">Preprations Instructions</string>
    <string name="preprationsinstructions">All the instructions will come here</string>
    <string name="listofallergies">Allergies</string>
    <string name="allergieslist">Allergies list</string>
    <string name="additem">Add Item</string>
    <string name="nameoffood">Name of food</string>
    <string name="descriptionoffood">Description</string>
    <string name="maxquanity">Max. Quanity of items avialable</string>
    <string name="one">1</string>
    <string name="unitsofmeasurments">Units of Measurements per Item</string>
    <string name="quantityofmeasurment">Units per measurments per item</string>
    <string name="quantityofmeasurment1">units/per Item</string>
    <string name="priceperitem">Price per item</string>
    <string name="listofingrediants1">List of Ingrediants</string>
    <string name="meatpresent">Contains Meat Products</string>
    <string name="allergies">Allergies</string>
    <string name="post">Post</string>
    <string name="open">1</string>
    <string name="close">2</string>
    <string name="UserHome">User Home</string>
    <string name="UserDiscover">Discover Fragment</string>
    <string name="UserProfile">User Profile</string>
    <string name="UserSettings">User Settings</string>
    <string name="naniname">Nani Name here</string>
    <string name="naniname1">Nani name</string>
    <string name="heading">Heading Here</string>
    <string name="name1">Name</string>
    <string name="name2">Name of Dish</string>
    <string name="price">Price of Dish</string>
    <string name="quanity1">Quantity</string>
    <string name="one1">1</string>
    <string name="chooseAddress">Choose Address</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>

    <style name="commentsonfood">Good Food</style>

    <string name="title_activity_user_location">Map</string>
    <string name="location">Location</string>
    <string name="location1">Search Drop Location</string>
</resources>
