<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/chooseAction"
        android:textColor="@android:color/black"
        android:textSize="@dimen/size15"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <Button
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/mar20"
        android:layout_gravity="center"
        android:text="@string/opencamera"
        android:background="@drawable/button_clicked"
        android:id="@+id/opencamerabutton"
        android:layout_width="@dimen/width270"
        android:layout_height="@dimen/height50">

    </Button>

    <Button
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/mar20"
        android:layout_gravity="center"
        android:text="@string/opengallery"
        android:background="@drawable/button_clicked"
        android:id="@+id/opengallerybutton"
        android:layout_width="@dimen/width270"
        android:layout_height="@dimen/height50"
        android:layout_marginBottom="@dimen/mar10">

    </Button>

</LinearLayout>