<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/user_profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_person_red_24dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>
    <TextView
        android:id="@+id/userusername"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/personName"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <TextView
        android:id="@+id/usereditprofiletext"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/editprofile"
        android:textStyle="normal"
        android:textColor="@android:color/holo_red_light"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <LinearLayout
        android:layout_marginTop="@dimen/mar10"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/mar10"
        android:layout_marginTop="8dp"
        android:layout_gravity="start"
        android:text="@string/subscriptions"
        android:textStyle="normal"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_nani_list"
        android:elevation="@dimen/elevation5"
        android:layout_marginTop="@dimen/mar20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height90">

    </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/mar20"
        android:layout_marginBottom="@dimen/mar10"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="@drawable/button_clicked"
        android:text="@string/logout"
        android:id="@+id/logoutbutton"
        android:layout_height="@dimen/height40"
        android:layout_width="@dimen/width300">

    </Button>


</LinearLayout>